[package]
name = "vulkano-seg-1554"
version = "0.1.0"
edition = "2018"

[dependencies]
vulkano = { version = "0.22" }
vulkano-win = { version = "0.22" }
winit = { version = "0.24.0" }
env_logger = { version = "0.8.3" }
log = { version = "^0.4.1" }

[patch.crates-io]
vulkano = { path = "../vulkano/vulkano" }
