[package]
name = "vulkano-seg-1545"
version = "0.1.0"
edition = "2018"

[dependencies]
vulkano = { version = "0.22" }
vulkano-win = { version = "0.22" }
winit = { version = "0.24.0" }
env_logger = { version = "0.8.3" }
log = { version = "^0.4.1" }

[patch.crates-io]
vulkano = { git = 'https://github.com/vulkano-rs/vulkano', rev = 'fb187e888469ac2255855ffa8b7022258a688222' }
