[package]
name = "vulkano-seg-1545"
version = "0.1.0"
edition = "2018"

[dependencies]
vulkano = { git = "https://github.com/dadleyy/vulkano", rev = "01fcd53faa6980d2bfbaf1542afeecabccb74d87" }
vulkano-win = { git = "https://github.com/dadleyy/vulkano", rev = "01fcd53faa6980d2bfbaf1542afeecabccb74d87" }
vk-sys = { git = "https://github.com/dadleyy/vulkano", rev = "01fcd53faa6980d2bfbaf1542afeecabccb74d87" }
winit = { version = "0.24.0" }
env_logger = { version = "0.8.3" }
log = { version = "^0.4.1" }
